--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -6,3 +6,20 @@ ja:
       previous: "&lsaquo; 前"
       next: "次へ &rsaquo;"
       truncate: "..."
+  simple_calender:
+    previous: "<<"
+    next: ">>"
+    week: 週
+    January: 1月
+    February: 2月
+    March: 3月
+    April: 4月
+    May: 5月
+    June: 6月
+    July: 7月
+    August: 8月
+    September: 9月
+    October: 10月
+    November: 11月
+    December: 12月
+    year: 年
